test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_return_nothing_2.plx
x: i32 = 1

pub fn foo(none) none {
    x = x - 1
    return;
}

pub fn main(none) i32 {
    foo()
    return x
}
